Fixes alignment of Local Sandbox dropdown from Header

--- a/cdap-ui/app/cdap/components/Header/ProductDropdown/ProductDropdown.scss
+++ b/cdap-ui/app/cdap/components/Header/ProductDropdown/ProductDropdown.scss
@@ -60,7 +60,6 @@
       display: inline-flex;
       line-height: 1;
       align-items: center;
-      padding-top: 4px;
       text-align: left;
 
       &:hover,
